Trying things out to change layout views...

--- a/HelloWorld/HelloWorld/Resources/layout/FirstPage.axml
+++ b/HelloWorld/HelloWorld/Resources/layout/FirstPage.axml
@@ -7,13 +7,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText1"
-        android:text="Main"
-        android:textStyle="bold"
-        android:typeface="normal"
+        android:text="You reached the First Page! WOO!"
         android:gravity="center_horizontal" />
     <Button
-        android:text="Go to HelloView"
+        android:text="Go Back to Home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/helloViewBtn" />
+        android:id="@+id/homePageBtn" />
 </LinearLayout>
