Use of activity more than 1 layout can be used.

--- a/HelloWorld/HelloWorld/Resources/layout/FirstPage.axml
+++ b/HelloWorld/HelloWorld/Resources/layout/FirstPage.axml
@@ -10,8 +10,8 @@
         android:text="You reached the First Page! WOO!"
         android:gravity="center_horizontal" />
     <Button
-        android:text="Go Back to Home"
+        android:text="Home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/homePageBtn" />
+        android:id="@+id/HomeBtn" />
 </LinearLayout>
