--- a/HelloWorld/HelloWorld/Resources/layout/Main.axml
+++ b/HelloWorld/HelloWorld/Resources/layout/Main.axml
@@ -12,8 +12,8 @@
         android:typeface="normal"
         android:gravity="center_horizontal" />
     <Button
-        android:text="Go to HelloView"
+        android:text="First Page"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/helloViewBtn" />
+        android:id="@+id/FirstPageBtn" />
 </LinearLayout>
