--- a/BasicMathGame/BasicMathGame/Resources/layout/MathSelectionMenu.axml
+++ b/BasicMathGame/BasicMathGame/Resources/layout/MathSelectionMenu.axml
@@ -14,24 +14,27 @@
     <Space
         android:layout_height="50dp" />
     <Button
-        android:text="Beginner"
+        android:text="Addition"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:id="@+id/beginnerBtn"
-        android:enabled="false" />
+        android:id="@+id/additionBtn" />
     <Button
-        android:text="Intermediate"
+        android:text="Subtraction"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:id="@+id/intermediateBtn"
-        android:enabled="false" />
+        android:id="@+id/subtractionBtn" />
     <Button
-        android:text="Expert"
+        android:text="Multiplication"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:id="@+id/expertBtn"
-        android:enabled="false" />
+        android:id="@+id/multiplicationBtn" />
+    <Button
+        android:text="Division"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:id="@+id/divisionBtn" />
 </LinearLayout>
