--- a/BasicMathGame/BasicMathGame/Resources/layout/AdditionGame.axml
+++ b/BasicMathGame/BasicMathGame/Resources/layout/AdditionGame.axml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="25dp" />
     <TextView
-        android:text="Main Menu"
+        android:text="Addition"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,16 +15,26 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="50dp" />
+    <TextView
+        android:text="x + y = ?"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:id="@+id/mathQuestion" />
+    <EditText
+        android:inputType="number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:id="@+id/mathAnswer" />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="25dp" />
     <Button
-        android:text="Math Select"
+        android:text="Submit Answer"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:id="@+id/mathSelectBtn" />
-    <Button
-        android:text="Scoreboard"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:id="@+id/scoreboardBtn" />
+        android:id="@+id/answerBtn" />
 </LinearLayout>
