--- a/BasicMathGame/BasicMathGame/Resources/layout/MathSelectionMenu.axml
+++ b/BasicMathGame/BasicMathGame/Resources/layout/MathSelectionMenu.axml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Space
+        android:layout_width="match_parent"
         android:layout_height="25dp" />
     <TextView
         android:text="Select Difficulty"
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center" />
     <Space
+        android:layout_width="match_parent"
         android:layout_height="50dp" />
     <Button
         android:text="Addition"
