--- a/BasicMathGame/BasicMathGame/Resources/layout/GameBoard.axml
+++ b/BasicMathGame/BasicMathGame/Resources/layout/GameBoard.axml
@@ -7,11 +7,12 @@
         android:layout_width="match_parent"
         android:layout_height="25dp" />
     <TextView
-        android:text="Addition"
+        android:text="title"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:gravity="center"
+        android:id="@+id/title"/>
     <Space
         android:layout_width="match_parent"
         android:layout_height="25dp" />
@@ -23,8 +24,8 @@
         android:gravity="center"
         android:id="@+id/scoreCounter" />
     <Space
-      android:layout_width="match_parent"
-      android:layout_height="25dp" />
+        android:layout_width="match_parent"
+        android:layout_height="25dp" />
     <TextView
         android:text="x + y = ?"
         android:textAppearance="?android:attr/textAppearanceLarge"
